--- a/app/src/main/res/layout/activity_login_usuario.xml
+++ b/app/src/main/res/layout/activity_login_usuario.xml
@@ -24,7 +24,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
-        android:background="#DFF2FF"
+        android:background="@drawable/custon_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -39,7 +39,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        android:background="#FFFFFF"
+        android:background="@drawable/custom_textbox"
         android:ems="10"
         android:inputType="textPassword"
         android:selectAllOnFocus="true"
@@ -84,7 +84,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        android:background="#FFFFFF"
+        android:background="@drawable/custom_textbox"
         android:ems="10"
         android:inputType="textEmailAddress"
         android:selectAllOnFocus="true"
@@ -109,6 +109,23 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
+    <Button
+        android:id="@+id/btnLoginAcessar"
+        android:layout_width="0dp"
+        android:layout_height="64sp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="64dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/custom_button"
+        android:fontFamily="@font/roboto_bold"
+        android:text="Acessar"
+        android:textAllCaps="false"
+        android:textColor="#FFFFFF"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtLoginUsuarioSenha" />
+
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
@@ -119,23 +136,6 @@
         android:text="Esqueceu a senha?"
         android:textColor="#48A4E4"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtLoginUsuarioSenha" />
-
-    <Button
-        android:id="@+id/btnLoginAcessar"
-        android:layout_width="0dp"
-        android:layout_height="64sp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="64dp"
-        android:layout_marginEnd="16dp"
-        android:background="#005592"
-        android:fontFamily="@font/roboto_bold"
-        android:text="Acessar"
-        android:textAllCaps="false"
-        android:textColor="#FFFFFF"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtLoginUsuarioSenha" />
 
 </android.support.constraint.ConstraintLayout>
