--- a/app/src/main/res/layout/activity_login_usuario.xml
+++ b/app/src/main/res/layout/activity_login_usuario.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activity.AcitivityLoginUsuario">
+    tools:context=".ui.activity.LoginUsuarioAcitivity">
 
     <TextView
         android:id="@+id/textView"
