--- a/app/src/main/res/layout/activity_login_usuario.xml
+++ b/app/src/main/res/layout/activity_login_usuario.xml
@@ -47,7 +47,7 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColorLink="#2196F3"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/imageView"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
@@ -132,10 +132,25 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        android:fontFamily="@font/roboto_light"
+        android:fontFamily="@font/roboto"
         android:text="Esqueceu a senha?"
         android:textColor="#48A4E4"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtLoginUsuarioSenha" />
+
+    <TextView
+        android:id="@+id/btnLoginNovoUsuario"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:clickable="true"
+        android:fontFamily="@font/roboto_medium"
+        android:text="Criar nova conta"
+        android:textColor="#48A4E4"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnLoginAcessar" />
 
 </android.support.constraint.ConstraintLayout>
