--- a/app/src/main/res/layout/activity_usuario.xml
+++ b/app/src/main/res/layout/activity_usuario.xml
@@ -34,7 +34,8 @@
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtUsuarioConfirmaSenha" />
+        app:layout_constraintTop_toBottomOf="@+id/txtUsuarioConfirmaSenha"
+         />
 
         <EditText
             android:id="@+id/txtUsuarioNome"
