--- a/app/src/main/res/layout/activity_lista_pacientes.xml
+++ b/app/src/main/res/layout/activity_lista_pacientes.xml
@@ -12,7 +12,9 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
-        android:text="Button"
+        android:background="@drawable/custom_button"
+        android:text="Salvar Paciente"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
