Atualizações de Design

--- a/app/src/main/res/layout/activity_dados_paciente.xml
+++ b/app/src/main/res/layout/activity_dados_paciente.xml
@@ -28,7 +28,7 @@
         android:layout_marginTop="16dp"
         android:fontFamily="@font/roboto_medium"
         android:text="Nome"
-        android:textColor="#147DC7"
+        android:textColor="@color/colorLabel"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView2" />
@@ -45,6 +45,7 @@
         android:selectAllOnFocus="true"
         android:singleLine="true"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="@color/corTexto"
         android:textColorLink="#2196F3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/textView3"
@@ -58,7 +59,7 @@
         android:layout_marginTop="16dp"
         android:fontFamily="@font/roboto_medium"
         android:text="CPF"
-        android:textColor="#147DC7"
+        android:textColor="@color/colorLabel"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtPacienteNome" />
@@ -74,6 +75,7 @@
         android:selectAllOnFocus="true"
         android:singleLine="true"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="@color/corTexto"
         android:textColorLink="#2196F3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/textView7"
@@ -87,7 +89,7 @@
         android:layout_marginTop="16dp"
         android:fontFamily="@font/roboto_medium"
         android:text="RG"
-        android:textColor="#147DC7"
+        android:textColor="@color/colorLabel"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtPacienteCpf" />
@@ -104,6 +106,7 @@
         android:selectAllOnFocus="true"
         android:singleLine="true"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="@color/corTexto"
         android:textColorLink="#2196F3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/textView8"
@@ -121,6 +124,7 @@
         android:selectAllOnFocus="true"
         android:singleLine="true"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="@color/corTexto"
         android:textColorLink="#2196F3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/textView9"
@@ -134,7 +138,7 @@
         android:layout_marginTop="16dp"
         android:fontFamily="@font/roboto_medium"
         android:text="Celular"
-        android:textColor="#147DC7"
+        android:textColor="@color/colorLabel"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtPacienteEmail" />
@@ -151,6 +155,7 @@
         android:selectAllOnFocus="true"
         android:singleLine="true"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="@color/corTexto"
         android:textColorLink="#2196F3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/textView10"
@@ -164,7 +169,7 @@
         android:layout_marginTop="16dp"
         android:fontFamily="@font/roboto_medium"
         android:text="Telefone"
-        android:textColor="#147DC7"
+        android:textColor="@color/colorLabel"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtPacienteCelular" />
@@ -184,7 +189,8 @@
         android:textColorLink="#2196F3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/textView11"
-        app:layout_constraintTop_toBottomOf="@+id/textView11" />
+        app:layout_constraintTop_toBottomOf="@+id/textView11"
+        android:textColor="@color/corTexto" />
 
     <TextView
         android:id="@+id/textView9"
@@ -194,7 +200,7 @@
         android:layout_marginTop="16dp"
         android:fontFamily="@font/roboto_medium"
         android:text="E-mail"
-        android:textColor="#147DC7"
+        android:textColor="@color/colorLabel"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtPacienteRg" />
