--- a/app/src/main/res/layout/activity_login_usuario.xml
+++ b/app/src/main/res/layout/activity_login_usuario.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="64dp"
         android:fontFamily="@font/roboto_bold"
         android:text="Olá\nDoutor"
-        android:textColor="#005592"
+        android:textColor="#147DC7"
         android:textSize="64sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -45,6 +45,8 @@
         android:selectAllOnFocus="true"
         android:singleLine="true"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="#FFFFFF"
+        android:textColorHighlight="@color/corPrincipal"
         android:textColorLink="#2196F3"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintHorizontal_bias="0.0"
@@ -59,7 +61,7 @@
         android:layout_marginTop="16dp"
         android:fontFamily="@font/roboto_medium"
         android:text="Senha"
-        android:textColor="#147DC7"
+        android:textColor="#74C2F9"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtLoginUsuarioEmail" />
@@ -72,7 +74,7 @@
         android:layout_marginTop="16dp"
         android:fontFamily="@font/roboto_bold"
         android:text="Login"
-        android:textColor="#005592"
+        android:textColor="#48A4E4"
         android:textSize="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView" />
@@ -90,6 +92,8 @@
         android:selectAllOnFocus="true"
         android:singleLine="true"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="#FFFFFF"
+        android:textColorHighlight="@color/corPrincipal"
         android:textColorLink="#2196F3"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintHorizontal_bias="0.0"
@@ -104,7 +108,7 @@
         android:layout_marginTop="32dp"
         android:fontFamily="@font/roboto_medium"
         android:text="E-mail"
-        android:textColor="#147DC7"
+        android:textColor="#74C2F9"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
@@ -134,7 +138,8 @@
         android:layout_marginEnd="16dp"
         android:fontFamily="@font/roboto"
         android:text="Esqueceu a senha?"
-        android:textColor="#48A4E4"
+        android:textColor="#74C2F9"
+        android:textColorLink="#74C2F9"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtLoginUsuarioSenha" />
@@ -147,7 +152,7 @@
         android:clickable="true"
         android:fontFamily="@font/roboto_medium"
         android:text="Criar nova conta"
-        android:textColor="#48A4E4"
+        android:textColor="#147DC7"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
