--- a/app/src/main/res/drawable/custom_button.xml
+++ b/app/src/main/res/drawable/custom_button.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
  android:shape="rectangle">
 
-    <solid android:color="#005592"/>
+    <solid android:color="#147DC7"/>
     <corners android:radius="4dp"/>
 
 </shape>
